.kube/deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: aftermath-services
  labels:
    name: aftermath-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: am-users-legacy
  name: am-users-legacy
  namespace: aftermath-services
spec:
  replicas: 4
  selector:
    matchLabels:
      app: am-users-legacy
  template:
    metadata:
      labels:
        app: am-users-legacy
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: docker.io/vkouzin/am-users-legacy:latest
          name: am-users-legacy
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "100m"
