.kube/service.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: aftermath-services
  labels:
    name: aftermath-services
---
apiVersion: v1
kind: Service
metadata:
  name: am-users-legacy-svc
  namespace: aftermath-services
spec:
  selector:
    app: am-users-legacy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
