.kube/ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: aftermath-services
  labels:
    name: aftermath-services
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: am-users-legacy-ingress
  namespace: aftermath-services
  annotations:
    cert-manager.io/cluster-issuer: "docker-nginx-issuer"
spec:
  tls:
    - hosts:
        - legacy.amth.one
      secretName: legacy-amth-onr-cert
  rules:
    - host: legacy.amth.one
      http:
        paths:
          - path: /users/v1
            pathType: Prefix
            backend:
              service:
                name: am-users-legacy-svc
                port:
                  number: 80
  ingressClassName: nginx
